# Physically_Based_Rendering

./: .clangd  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  compile_commands.json
ext/ktx/: CMakeLists.txt
ext/tinygltf/: .gitignore
models/: sphere.gltf  sphere2.gltf  sphere3.gltf  sphereNcube.gltf
newold/: Buffer.cpp  Buffer.h  command.cpp  command.h  device.cpp  device.h  indexBuffer.h  main.cpp  uniformBuffers.cpp  uniformBuffers.h  vertexBuffer.cpp  vertexBuffer.h  vkApplication.cpp  vkApplication.h  vkInstance.cpp  vkInstance.h  vkPipeLine.cpp  vkPipeLine.h  vkSwapChain.cpp  vkSwapChain.h  window.cpp  window.h
newold/descriptor/: descriptor.cpp  descriptor.h
old/: buffer.cpp  buffer.h  device.cpp  device.h  graphicsPipeLine.cpp  graphicsPipeLine.h  main.cpp  mesh.cpp  mesh.h  renderer.cpp  renderer.h  shader.h  swapChain.cpp  swapChain.h  texture.cpp  texture.h  vertexBuffer.cpp  vertexBuffer.h  vulkanRenderer.cpp  vulkanRenderer.h  window.cpp  window.h
opariaineistoa/: debug_config.txt  how_does_descriptors_work.txt
shaders/: CubeMap.frag  CubeMap.vert  FragmentShader.frag  NoTexUnreal.frag  NoTexUnreal.vert  NoTexfrag.spv  NoTexvert.spv  UnrealPbr.frag  UnrealPbr.vert  Uusi Text Document.txt  VertexShader.vert  brdflut.frag  brdflut.vert  compile.bat  compile.sh  cubemapfrag.spv  cubemapvert.spv  fragNoTex.frag  fragmentShader.spv  irradianceCube.frag  irradianceCube.vert  noTexUnrealfrag.spv  prefilteredCube.frag  prefilteredCube.vert  unrealpbrfrag.spv  unrealpbrvert.spv  vert.spv  vertNoTex.vert  vertexShader.spv
src/: Application.cpp  Application.hpp  Buffer.cpp  Buffer.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  CommandBuffer.cpp  CommandBuffer.hpp  Descriptors.cpp  Descriptors.hpp  Device.cpp  Device.hpp  Entity.cpp  Entity.hpp  FrameBuffer.cpp  FrameBuffer.hpp  Image.cpp  Image.hpp  Model.cpp  Model.hpp  PipelineBuilder.cpp  PipelineBuilder.hpp  RenderPass.cpp  RenderPass.hpp  SwapChain.cpp  SwapChain.hpp  Synchronization.hpp  Texture.cpp  Texture.hpp  Window.cpp  Window.hpp  device.cpp  device.h  frame.hpp  graphicsPipeLine.cpp  graphicsPipeLine.h  instance.cpp  instance.h  kApplication.cpp  (+54 more)
srcbackup/: kApplication.cpp  kApplication.hpp  kBuffer.cpp  kDescriptors.cpp  kDevice.cpp  kEntity.cpp  kGraphicsPipeline.hpp  kImage.cpp  kImage.hpp  kModel.cpp  kModel.hpp  kRenderer.cpp  kRenderer.hpp  kSwapChain.cpp  kSwapChain.hpp  kTexture.hpp  kWindow.cpp  keyboardMovement.hpp  main.cpp  types.hpp
(+38 files in other folders)
